<?xml version="1.0"?>
<package>
  <name>control_msgs</name>
  <version>0.0.1</version>
  <description>
  Messages for controllig
  </description>
  <maintainer email="whuzxy@foxmail.com">whuzxy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>std_msgs</run_depend>

</package>
