<?xml version="1.0"?>
<package>
  <name>control_plugins</name>
  <version>0.0.1</version>
  <description>
  control_plugin
  </description>
  <maintainer email="whuzxy@foxmail.com">whuzxy</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ignition-msgs0</build_depend>
  <build_depend>ignition-transport3</build_depend>

  <run_depend>joy</run_depend>  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
