<?xml version="1.0"?>
<package>
  <name>vehicle_sim</name>
  <version>0.0.1</version>
  <description>
  The car demo
  </description>
  <maintainer email="whuzxy@foxmail.com">whuzxy</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    
  </export>
</package>
